fix apply now being too low when responsive

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -47,6 +47,10 @@
     position: relative;
   }
 
+  #apply {
+    padding-top: 0;
+  }
+
   .content {
     width: 95%;
   }
